# openfire

./: .gitignore  .markdownlint.jsonc  Cargo.toml  EQUATION_RELATIONSHIPS.md  LICENSE.txt  README.md  api.rst  codegen.ts  conf.py  docs-requirements.txt  equation_relationships.toml  mkdocs.yml  package-lock.json  package.json  tsconfig.json  vite.config.ts
crates/framework/: Cargo.toml
crates/framework/src/: filesystem.rs  lib.rs  method.rs
crates/framework/src/method/: parameter.rs  parameters.rs  runner.rs  step.rs  test.rs
crates/openfire_cli/: Cargo.toml  my_method  my_project
crates/openfire_cli/src/: cli.rs  commands.rs  impls.rs  lib.rs  main.rs
crates/openfire_cli/src/commands/: about.rs  calculation.rs  list.rs  new.rs  run.rs  test.rs
crates/python_api/: Cargo.toml  PYTHON_README.md  README.md  README_TESTING.md  pyproject.toml
crates/python_api/.github/: copilot-instructions.md
crates/python_api/docs/: cli.rst  conf.py  definitions.rst  index.rst
crates/python_api/docs/api/: br-187.rst  bs-9999.rst  cibse-guide-e.rst  eurocode-1-1-2.rst  fire-dynamics-tools.rst  index.rst  introduction-to-fire-dynamics.rst  pd-7974.rst  sfpe-handbook.rst
crates/python_api/docs/examples/: index.rst  introduction-to-fire-dynamics-examples.rst  sfpe-handbook-examples.rst
crates/python_api/docs/guide/: equation-relationships.rst
crates/python_api/ofire/: __init__.py  __main__.py  agents_template.md  cli.py  project.py
crates/python_api/ofire/templates/: agents_template.md  main.py
crates/python_api/src/: CLAUDE.md  br_187.rs  bs9999.rs  cibse_guide_e.rs  eurocode_1_1_2.rs  fire_dynamics_tools.rs  introduction_to_fire_dynamics.rs  lib.rs  pd_7974.rs  sfpe_handbook.rs  tr_17.rs
crates/python_api/src/br_187/: appendix_a.rs  chapter_1.rs
crates/python_api/src/bs9999/: chapter_15.rs
crates/python_api/src/cibse_guide_e/: chapter_10.rs  chapter_6.rs  chapter_7.rs
crates/python_api/src/eurocode_1_1_2/: annex_e.rs  section_3.rs
crates/python_api/src/fire_dynamics_tools/: chapter_18.rs  chapter_2.rs  chapter_4.rs  chapter_5.rs  chapter_9.rs
crates/python_api/src/introduction_to_fire_dynamics/: chapter_10.rs  chapter_6.rs
crates/python_api/src/pd_7974/: part_1.rs
crates/python_api/src/sfpe_handbook/: chapter_14.rs  chapter_50.rs
crates/python_api/src/tr_17/: section_2.rs
crates/python_api/tests/: conftest.py  test_cli.py
crates/wasm_api/: Cargo.toml  README.md  package-lock.json  package.json  test.html  typedoc.json
crates/wasm_api/docs/: index.html  modules.html
crates/wasm_api/docs-src/: installation.md
crates/wasm_api/docs-src/api/: fire-dynamics-tools.md  index.md
crates/wasm_api/docs-src/user-guide/: fire-dynamics-examples.md  getting-started.md
crates/wasm_api/docs/assets/: navigation.js  search.js
crates/wasm_api/docs/classes/: wasm_api.Chapter2.html  wasm_api.Chapter4.html  wasm_api.Chapter5.html  wasm_api.FireDynamicsTools.html
crates/wasm_api/docs/documents/: API_Reference.html  Fire_Dynamics_Examples.html  Fire_Dynamics_Tools.html  Getting_Started.html  Installation.html
crates/wasm_api/docs/functions/: wasm_api.calculate_circle_area.html  wasm_api.calculate_fire_spread_risk.html  wasm_api.compartment_interior_surface_area.html  wasm_api.convective_heat_transfer_coefficient.html  wasm_api.default.html  wasm_api.density_hot_gas_layer.html  wasm_api.get_fire_dynamics_tools.html  wasm_api.heat_transfer_coefficient_longtimes_or_thinwalls.html  wasm_api.heat_transfer_coefficient_shorttimes_or_thickwalls.html  wasm_api.height_smoke_layer_interface_natural_ventilation.html  wasm_api.hot_gas_temperature_increase.html  wasm_api.hot_gas_temperature_increase_beyler_closed_compartment.html  wasm_api.hot_gas_temperature_increase_forced_ventilation.html  wasm_api.initSync.html  wasm_api.k_constant_smoke_layer_height.html  wasm_api.k_constant_smoke_layer_height_post_substitution.html  wasm_api.main.html  wasm_api.nondimensional_hot_gas_temperature_increase.html  wasm_api.placeholder_4_1.html  wasm_api.placeholder_4_2.html  wasm_api.placeholder_4_3.html  wasm_api.placeholder_5_1.html  wasm_api.thermal_penetration_time.html
crates/wasm_api/docs/interfaces/: wasm_api.InitOutput.html
crates/wasm_api/docs/modules/: wasm_api.html
crates/wasm_api/docs/types/: wasm_api.InitInput.html  wasm_api.SyncInitInput.html
crates/wasm_api/sphinx-docs/: conf.py  index.rst  installation.rst
crates/wasm_api/sphinx-docs/api/: fire-dynamics-tools.rst  index.rst
crates/wasm_api/sphinx-docs/guide/: fire-dynamics-examples.rst  getting-started.rst  index.rst
crates/wasm_api/src/: br_187.rs  fire_dynamics_tools.rs  lib.rs  utils.rs
crates/wasm_api/src/fire_dynamics_tools/: chapter_2.rs  chapter_4.rs  chapter_5.rs
docs/: api.md  conf.py  (+3 more)
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: desktop.json  main.json  migrated.json
src-tauri/crates/br_187/: Cargo.toml
src-tauri/crates/br_187/src/: lib.rs
src-tauri/crates/eurocode_1/: Cargo.toml
src-tauri/crates/eurocode_1/src/: lib.rs  parametric_fires.rs
src-tauri/crates/introduction_to_fire_dynamics/: Cargo.toml
src-tauri/crates/pd_7974/: Cargo.toml
src-tauri/crates/sfpe_handbook/: Cargo.toml
src-tauri/migrations/2024-03-29-053634_create_users/: up.sql
src-tauri/migrations/2024-03-30-053453_create_workspaces/: down.sql  up.sql
src-tauri/resources/br187/: about.md
src-tauri/resources/cibse_e/: about.md
src-tauri/resources/introduction_to_fire_dynamics/: about.md
src-tauri/resources/pd7974/: about.md
src-tauri/resources/sfpe_handbook/: about.md
src-tauri/src/: commands.rs  config.rs  domain.rs  filesystem.rs  lib.rs  main.rs  tools.rs
src-tauri/src/commands/: filesystem.rs  forms.rs  impls.rs  license.rs  settings.rs  tab.rs
src-tauri/src/commands/method/: builder.rs
src-tauri/src/domain/: filesystem.rs  impls.rs  license.rs  method.rs  settings.rs  tab.rs
src-tauri/src/domain/auth/: get_user.rs  init_session.rs  logout.rs
src-tauri/src/form/: meta.rs
src-tauri/src/tools/: cookie_jar.rs
src-tauri/test/fixtures/: tauri.conf.json
(+606 files in other folders)
