[package]
name = "OpenFire"
version = "0.1.8"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "OpenFire"
edition = "2021"
rust-version = "1.81"

[lib]
name = "fire_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = ["test"] }
specta = "2.0.0-rc.20"
tauri-plugin-deep-link = "2"
tauri-specta = { version = "2.0.0-rc.20", features = ["derive", "typescript"] }
specta-typescript = "0.0.7"
graphql_client = "0.13.0"
csv = "1.3.0"
serde_yaml = "0.9.34"
url = "2.5.0"
uuid = { version = "1.8.0", features = ["v4"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["macros"] }
reqwest_cookie_store = "0.8.0"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-http = "2.0.1"
validator = { version = "0.18.1", features = ["derive"] }
thiserror = "1.0.64"

eurocode_1 = { path = "./crates/eurocode_1" }
sfpe_handbook = { path = "./crates/sfpe_handbook" }
tauri-plugin-process = "2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = { version = "2.0.1", features = ["deep-link"] }
