[package]
name = "framework"
version = "0.1.0"
edition = "2024"

[dependencies]
lazy_static = "1.5.0"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0.117"
specta = { version = "2.0.0-rc.20", features = ["derive"] }
uuid = { version = "1.8.0", features = ["v4"] }
thiserror = "1.0.64"
sha2 = "0.10.8"
hex-literal = "1.0.0"
