[build-system]
requires = ["maturin>=1.6,<2.0"]
build-backend = "maturin"

[project]
name = "ofire"
version = "0.1.0"
description = "Fire safety engineering tools implemented in Rust with Python bindings."
# readme = "README.md"
requires-python = ">=3.8"
# license = { file = "LICENSE" }
authors = [{ name = "EmberonTech", email = "jamie@emberontech.com" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/fire-library/openfire"
